[package]
name = "f3l"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ 
    "crates/f3l_core",
    "crates/f3l_features", 
    "crates/f3l_filter", "crates/f3l_glam",
    "crates/f3l_search_tree",
    "crates/f3l_segmentation"
]

[dependencies]
