[package]
name = "f3l_core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
f3l_glam = {path = "../f3l_glam"}
num-traits = "0.2.17"
rayon = "1.8"
serde = {version = "1.0", features = ["serde_derive"]}
serde_arrays = "0.1"