[package]
name = "f3l_features"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[features]
default = []
app_kiss3d = [
    "kiss3d",
    "nalgebra",
    "f3l_segmentation"
]

[dependencies]
f3l_core = { path = "../f3l_core", version = "0.3"}
f3l_search_tree = { path = "../f3l_search_tree", version = "0.3"}
rand = "0.8"

kiss3d = { version = "0.35.0", optional = true }
nalgebra   = { version = "0.32", features = ["rand", "glam025"], optional = true}
f3l_segmentation = { path = "../f3l_segmentation", optional = true}

[dev-dependencies]
ply-rs = "0.1.3"
serde_json = "1"

[[example]]
name = "bounding"
path = "examples/bounding.rs"
required-features = ["app_kiss3d"]

[[example]]
name = "normal_estimate"
path = "examples/normal_estimate.rs"
required-features = ["app_kiss3d"]
