[package]
name = "f3l_filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[features]
default = []
app_kiss3d = [
    "kiss3d",
    "nalgebra"
]


[dependencies]
f3l_core = { path = "../f3l_core"}
f3l_search_tree = { path = "../f3l_search_tree" }

kiss3d = { version = "0.35.0", optional = true }
nalgebra   = { version = "0.32", features = ["rand", "glam025"], optional = true}

[dev-dependencies]
approx = "0.5"
rand = "0.8"
ply-rs = "0.1.3"


[[example]]
name = "radius_outlier_removal"
path = "examples/radius_outlier_removal.rs"
required-features = ["app_kiss3d"]

[[example]]
name = "voxel_grid"
path = "examples/voxel_grid.rs"
required-features = ["app_kiss3d"]

[[example]]
name = "pass_through"
path = "examples/pass_through.rs"
required-features = ["app_kiss3d"]

[[example]]
name = "condition_removal"
path = "examples/condition_removal.rs"
required-features = ["app_kiss3d"]

[[example]]
name = "statistical_outlier_removal"
path = "examples/statistical_outlier_removal.rs"
required-features = ["app_kiss3d"]
