[package]
name = "f3l_filter"
version = "0.2.1"
edition = "2021"
authors = ["Donvlouss"]

license = "MIT OR Apache-2.0"
description = "3D Point Cloud Library"
readme = "README.md"
repository = "https://github.com/Donvlouss/f3l"
keywords = ["3d", "pointcloud", "point-cloud"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[features]
default = []
app_kiss3d = [
    "kiss3d",
    "nalgebra"
]


[dependencies]
f3l_core = { path = "../f3l_core", version = "0.3"}
f3l_search_tree = { path = "../f3l_search_tree", version = "0.3"}

kiss3d = { version = "0.35.0", optional = true }
nalgebra   = { version = "0.32", features = ["rand", "glam025"], optional = true}

[dev-dependencies]
approx = "0.5"
rand = "0.8"
ply-rs = "0.1.3"
serde_json = "1"


[[example]]
name = "radius_outlier_removal"
path = "examples/radius_outlier_removal.rs"
required-features = ["app_kiss3d"]

[[example]]
name = "voxel_grid"
path = "examples/voxel_grid.rs"
required-features = ["app_kiss3d"]

[[example]]
name = "pass_through"
path = "examples/pass_through.rs"
required-features = ["app_kiss3d"]

[[example]]
name = "condition_removal"
path = "examples/condition_removal.rs"
required-features = ["app_kiss3d"]

[[example]]
name = "statistical_outlier_removal"
path = "examples/statistical_outlier_removal.rs"
required-features = ["app_kiss3d"]
