[package]
name = "f3l_glam"
version = "0.1.1"
edition = "2021"
authors = ["Donvlouss"]

license = "MIT OR Apache-2.0"
description = "3D Point Cloud Library"
readme = "README.md"
repository = "https://github.com/Donvlouss/f3l"
keywords = ["3d", "pointcloud", "point-cloud"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
num-traits = "0.2.17"
glam = { version = "0.29", features = ["std", "serde"]}