[package]
name = "f3l_search_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[features]
default = []
app_kiss3d = [
    "kiss3d",
    "nalgebra",
]

[dependencies]
f3l_core = { path = "../f3l_core"}
nalgebra   = { version = "0.32", features = ["rand", "glam025"], optional = true}
kiss3d = { version = "0.35.0", optional = true }

[dev-dependencies]
nalgebra = { version = "0.32", features = ["glam025"]}
approx = "0.5"
ply-rs = "0.1.3"
rand = "0.8"

[[example]]
name = "search_colorize"
path = "examples/search_colorize.rs"
required-features = ["app_kiss3d"]