[package]
name = "f3l_search_tree"
version = "0.3.0"
edition = "2021"
authors = ["Donvlouss"]

license = "MIT OR Apache-2.0"
description = "3D Point Cloud Library"
readme = "README.md"
repository = "https://github.com/Donvlouss/f3l"
keywords = ["3d", "pointcloud", "point-cloud"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[features]
default = ["core"]
core = ["f3l_core"]
pure = ["num-traits", "rayon", "serde"]
app_kiss3d = [
    "kiss3d",
    "nalgebra",
    "core"
]

[dependencies]
f3l_core = { path = "../f3l_core", version = "0.3", optional = true}
nalgebra   = { version = "0.32", features = ["rand", "glam025"], optional = true}
kiss3d = { version = "0.35.0", optional = true }

num-traits = {version = "0.2.17", optional = true}
rayon = {version = "1.8", optional = true}
serde = {version = "1.0", features = ["serde_derive"], optional = true}

[dev-dependencies]
nalgebra = { version = "0.32", features = ["glam025"]}
approx = "0.5"
ply-rs = "0.1.3"
rand = "0.8"
serde_json = "1"

[[example]]
name = "search_colorize"
path = "examples/search_colorize.rs"
required-features = ["app_kiss3d"]