[package]
name = "f3l_segmentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["app_kiss3d"]
app_kiss3d = [
    "kiss3d",
    "nalgebra"
]

[dependencies]
f3l_core = { path = "../f3l_core"}
f3l_search_tree = { path = "../f3l_search_tree" }
rand = "0.8"

kiss3d = { version = "0.35.0", optional = true }
nalgebra   = { version = "0.32", features = ["rand", "glam025"], optional = true}

[dev-dependencies]
ply-rs = "0.1.3"

[[example]]
name = "euclidean_cluster_extraction"
path = "examples/euclidean_cluster_extraction.rs"
required-features = ["app_kiss3d"]