[package]
name = "f3l_surface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[features]
default = []
app_kiss3d = [
    "kiss3d",
    "nalgebra",
    "image"
]

[dependencies]
f3l_core = { path = "../f3l_core"}
f3l_segmentation = { path = "../f3l_segmentation"}

kiss3d = { version = "0.35.0", optional = true }
nalgebra   = { version = "0.32", features = ["rand", "glam025"], optional = true}
image = { version = "0.25.1", optional = true }

[dev-dependencies]
ply-rs = "0.1.3"
rand = "0.8"
serde_json = "1"