[package]
name = "f3l_surface"
version = "0.2.0"
edition = "2021"
authors = ["Donvlouss"]

license = "MIT OR Apache-2.0"
description = "3D Point Cloud Library"
readme = "README.md"
repository = "https://github.com/Donvlouss/f3l"
keywords = ["3d", "pointcloud", "point-cloud"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[features]
default = []
app_kiss3d = [
    "kiss3d",
    "nalgebra",
    "image"
]

[dependencies]
f3l_core = { path = "../f3l_core", version = "0.3"}
f3l_segmentation = { path = "../f3l_segmentation", version = "0.2"}

kiss3d = { version = "0.35.0", optional = true }
nalgebra   = { version = "0.32", features = ["rand", "glam025"], optional = true}
image = { version = "0.25.1", optional = true }

[dev-dependencies]
ply-rs = "0.1.3"
rand = "0.8"
serde_json = "1"